--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,9 @@
 
 .auth-form-container{
   padding: 1rem;
-  margin: 0.5rem
+  margin: 0.5rem;
+  /* border: 2px solid white;
+  border-color: white; */
 }
 
 label {
@@ -37,10 +39,13 @@ input {
   padding: 1rem;
   border: none;
   border-radius: 10px;
+  width: 250px;
 }
 
 button {
   border: none;
+  margin: 0.5rem;
+  width: 280px;
   background-color: rgb(251, 252, 252);
   padding: 10px;
   border-radius: 10px;
