--- a/frontend/src/assets/styles/App.css
+++ b/frontend/src/assets/styles/App.css
@@ -1,4 +1,4 @@
-.App {
+.App-unauth {
   text-align: center;
   display: flex;
   min-height:100vh;
@@ -8,52 +8,6 @@
   background-image: linear-gradient(79deg, #780206, #FF003C);
 }
 
-.auth-form-container, .login-form, .register-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-}
-
-.logo{
-  width: 40%;
-  height: auto;
-  margin-bottom: 0px;
-}
-
-.auth-form-container{
-  padding: 1rem;
-  margin: 0.5rem;
-  /* border: 2px solid white;
-  border-color: white; */
-}
-
-label {
-  text-align: left;
-  padding: 0.25rem 0;
-}
-
-input {
-  margin: 0.5rem 0;
-  padding: 1rem;
-  border: none;
-  border-radius: 10px;
-  width: 250px;
-}
-
-button {
-  border: none;
-  margin: 0.5rem;
-  width: 280px;
-  background-color: rgb(251, 252, 252);
-  padding: 10px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-.link-btn {
-  background: none;
-  color: rgb(234, 234, 242);
-  text-decoration: underline;
+.App-auth {
+  background-image: white;
 }
